site: publish example-project 7